@@ -1,70 +1,91 @@
 package org.edu.fpm.gym.service;
 
+import lombok.SneakyThrows;
+import org.edu.fpm.gym.dto.trainer.TrainerDTO;
+import org.edu.fpm.gym.dto.trainer.TrainerUpdateProfileDTO;
+import org.edu.fpm.gym.dto.training.TrainingDTO;
+import org.edu.fpm.gym.dto.user.UserDTO;
+import org.edu.fpm.gym.entity.Trainee;
 import org.edu.fpm.gym.entity.Trainer;
-import org.edu.fpm.gym.entity.Training;
 import org.edu.fpm.gym.entity.TrainingType;
 import org.edu.fpm.gym.entity.User;
 import org.edu.fpm.gym.repository.TrainerRepository;
+import org.edu.fpm.gym.utils.TestDataFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TrainerServiceTest {
     @Mock
     private TrainerRepository trainerRepository;
 
+    @Mock
+    private UserService userService;
+
+    @Mock
+    AuthService authService;
+
     @InjectMocks
     private TrainerService trainerService;
 
+
+
     private Trainer trainer;
+    private TrainingType trainingType;
+    private TrainerUpdateProfileDTO updateProfile;
+
+    private final String username = "john.doe";
+    private final String password = "password";
 
     @BeforeEach
     public void setUp() {
+        trainingType = TestDataFactory.createTrainingType();
 
-        trainer = new Trainer();
-        trainer.setUser(new User());
-        trainer.getUser().setFirstName("John");
-        trainer.getUser().setLastName("Doe");
-        trainer.getUser().setUsername("john.doe");
-        trainer.getUser().setPassword("testPassword");
-        trainer.getUser().setIsActive(true);
-        trainer.setSpecialization(new TrainingType());
-        trainer.setTrainees(new HashSet<>());
+        updateProfile = new TrainerUpdateProfileDTO("john.doe", "UpdatedJohn",
+                        "UpdatedDoe", trainingType, true);
 
+        trainer = TestDataFactory.createTrainer(TestDataFactory.createUser("john.doe"), trainingType);
     }
 
     @Test
     void createTrainer_Test() {
-        String username = "john.doe";
-        String password = "testPassword";
-        when(trainerRepository.save(trainer)).thenReturn(trainer);
+        String firstName = "John";
+        String lastName = "Doe";
 
-        Trainer createdTrainer = trainerService.createTrainer(trainer);
+        var trainerDTO = new TrainerDTO(
+                new UserDTO(firstName, lastName, username, true), trainingType);
 
-        verify(trainerRepository).save(trainer);
-        assertEquals(username, trainer.getUser().getUsername());
-        assertEquals(password, trainer.getUser().getPassword());
-        assertEquals(createdTrainer, trainer);
+        when(userService.generateUsername(firstName, lastName)).thenReturn(username);
+        when(userService.generatePassword()).thenReturn(password);
+
+        when(trainerRepository.save(any(Trainer.class))).thenReturn(trainer);
+
+        Trainer createdTrainer = trainerService.createTrainer(trainerDTO);
+
+        verify(trainerRepository, times(2)).save(any(Trainer.class));
+
+        assertEquals(username, createdTrainer.getUser().getUsername());
+        assertEquals(password, createdTrainer.getUser().getPassword());
+        assertEquals(firstName, createdTrainer.getUser().getFirstName());
+        assertEquals(lastName, createdTrainer.getUser().getLastName());
+        assertEquals(trainingType, createdTrainer.getSpecialization());
     }
 
     @Test
     void getTrainerByUsername_Test() {
-        String username = "John.Doe";
-
         when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
         Trainer foundTrainer = trainerService.getTrainerByUsername(username);
         verify(trainerRepository).findTrainerByUser_Username(username);
@@ -72,66 +93,98 @@ class TrainerServiceTest {
     }
 
     @Test
-    void updateTrainerProfile_Test() {
-        trainerService.updateTrainerProfile(trainer);
-        verify(trainerRepository).updateTrainerByUserUsername(trainer);
-    }
-
-    @Test
-    void changeTrainerPassword_Test() {
-        String username = "John.Doe";
-        String newPassword = "newPassword";
-
-        trainerService.changeTrainerPassword(username, newPassword);
-        verify(trainerRepository).changePassword(username, newPassword);
-    }
-
-    @Test
     void switchTrainerActivation_Test() {
-        String username = "John.Doe";
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
 
-        trainerService.switchTrainerActivation(username);
-        verify(trainerRepository).switchActivation(username);
+        boolean isActive = true;
+
+        trainerService.switchTrainerActivation(username, isActive, password);
+
+        verify(trainerRepository, times(1)).switchActivation(username, isActive);
     }
 
     @Test
     void deleteTrainer_Test() {
-        String username = "John.Doe";
-
-        trainerService.deleteTrainer(username);
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        trainerService.deleteTrainer(username, password);
         verify(trainerRepository).deleteTrainerByUser_Username(username);
     }
 
     @Test
+    @SneakyThrows
     void getAvailableTrainersForTrainee_Test() {
-        String traineeUsername = "traineeUsername";
-        when(trainerRepository.findAvailableTrainersForTrainee(traineeUsername)).thenReturn(Collections.singletonList(trainer));
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findAvailableTrainersForTrainee(username)).thenReturn(Collections.singletonList(trainer));
 
-        List<Trainer> availableTrainers = trainerService.getAvailableTrainersForTrainee(traineeUsername);
+        List<Trainer> availableTrainers = trainerService.getAvailableTrainersForTrainee(username, password);
 
-        verify(trainerRepository).findAvailableTrainersForTrainee(traineeUsername);
+        verify(trainerRepository).findAvailableTrainersForTrainee(username);
         assertEquals(1, availableTrainers.size());
-        assertEquals(trainer, availableTrainers.get(0));
+        assertEquals(trainer, availableTrainers.getFirst());
+    }
+    @Test
+    @SneakyThrows
+    void getTrainingsForTrainer_Test() {
+        var training = TestDataFactory.createTraining(trainer);
+        var trainingRequest = TestDataFactory.createTrainingRequestDTO();
+        var trainee = new Trainee();
+        trainee.setUser(new User("Trainee", "John", "Doe", true));
+        training.setTrainee(trainee);
+
+        when(authService.isAuthenticateUser(trainingRequest.username(), trainingRequest.password())).thenReturn(true);
+        when(trainerRepository.getTrainingsForTrainer(
+                trainingRequest.username(),
+                trainingRequest.periodFrom(),
+                trainingRequest.periodTo(),
+                trainingRequest.trainerName()))
+                .thenReturn(List.of(training));
+
+        List<TrainingDTO> trainings = trainerService.getTrainingsForTrainer(trainingRequest);
+
+        assertNotNull(trainings);
+        assertEquals(1, trainings.size());
+        assertEquals("Cardio Workout", trainings.getFirst().trainingName());
+        assertEquals("John", trainings.getFirst().userName());
     }
 
     @Test
-    void getTrainingsForTrainer_Test() {
-        String username = "trainer.username";
-        LocalDate fromDate = LocalDate.now().minusDays(7);
-        LocalDate toDate = LocalDate.now();
-        String traineeName = "trainee.username";
+    @SneakyThrows
+    void getTrainerProfile_Test() {
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
 
-        Training training1 = new Training();
-        Training training2 = new Training();
-        List<Training> expectedTrainings = List.of(training1, training2);
+        var profile = trainerService.getTrainerProfile(username, password);
 
-        when(trainerRepository.getTrainingsForTrainer(username, fromDate, toDate, traineeName))
-                .thenReturn(expectedTrainings);
+        assertNotNull(profile);
+        assertEquals("John", profile.firstName());
+        assertEquals("Doe", profile.lastName());
+        assertEquals("Cardio", profile.trainingType().getTrainingTypeName());
+    }
 
-        List<Training> actualTrainings = trainerService.getTrainingsForTrainer(username, fromDate, toDate, traineeName);
+    @Test
+    @SneakyThrows
+    void updateTrainerProfile_Test() {
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(trainer);
+        when(trainerRepository.updateTrainerByUserUsername(anyString(), any(Trainer.class))).thenReturn(trainer);
 
-        assertNotNull(actualTrainings);
-        assertEquals(expectedTrainings.size(), actualTrainings.size());
-        assertEquals(expectedTrainings, actualTrainings);
+        var updatedProfile = trainerService.updateTrainerProfile(updateProfile, password);
+
+        assertNotNull(updatedProfile);
+        assertEquals("UpdatedJohn", updatedProfile.firstName());
+        assertEquals("UpdatedDoe", updatedProfile.lastName());
+        assertEquals("Cardio", updatedProfile.trainingType().getTrainingTypeName());
+    }
+
+    @Test
+    @SneakyThrows
+    void getTrainerProfile_TrainerNotFound_Test() {
+        when(authService.isAuthenticateUser(username, password)).thenReturn(true);
+        when(trainerRepository.findTrainerByUser_Username(username)).thenReturn(null);
+
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class, () -> trainerService.getTrainerProfile(username, password));
+
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
+        assertEquals("404 NOT_FOUND \"Trainer not found\"", exception.getMessage());
     }
 }
